[package]
name = "seecrets"
readme = "./README.md"
authors = ["Ben Raz"]
homepage = "https://github.com/benraz123/seecrets"
description = "A password-protected way of creating and storing secrets"
license-file = "./LICENSE"
keywords = ["cli", "secure", "app"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/seecrets/latest"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto=true
codegen-units = 1
strip=true


[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
magic-crypt = "3.1.12"
requestty = { version = "0.5.0", features = ["macro", "macros"] }
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
sha256 = "1.1.4"
sqlite = "0.31.0"

